# libnm

./: CMakeLists.txt
nm/: CMakeLists.txt  error.hh  functor.hh  integral.cc  integral.hh  quadrature.cc  quadrature.hh  root.cc  root.hh
tests/: CMakeLists.txt  test-abscissa.cc  test-abscisse.cc  test-integral.cc  test-root.cc
